# outline-sync-action

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  Dockerfile.mmdc  LICENSE  Pipfile  README.md  action.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
demo/: README.md  outline_test.md
gfmd/: __init__.py  __main__.py  elements.py  outlineapi.py
src/: markdown_process
