[project]
name = "GFMDiagrams"
version = "0.1.0"
description = "Add images for mermaid diagrams to your markdown."
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/cookpad/gfm-diagram"
repository = "https://github.com/cookpad/gfm-diagram"
documentation = "https://github.com/cookpad/gfm-diagram"
